--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -38,6 +38,7 @@
       clear: left;
       margin-left:1em;
       float:left;
+      margin-top: inherit;
     }
     @include breakpoint($desktop) {
       @include grid-span(3, 1, $output-style: 'float');
